Move some icalspecific code into util2.IcalendarUtil
Reduce use of CalendarWRapper